@@ -1,4 +1,4 @@
-# dl4j-captcha-breaker-example
+# dl4j-captcha-breaker-example [![Build Status](https://travis-ci.com/eltherion/dl4j-captcha-breaker-example.svg?branch=master)](https://travis-ci.com/eltherion/dl4j-captcha-breaker-example)
 Quick example of breaking simple captcha images with DL4J.
 
 ## Running application
@@ -28,57 +28,58 @@ sbt run
 Then learning and verifying model will happen. Please, be patient, as the whole process may take few hours. You should see output similar to that:
 
 ```bash
-dl4j-captcha-breaker-example$ sbt -mem run
+dl4j-captcha-breaker-example$ sbt "run 400"
 [info] Loading settings for project global-plugins from idea.sbt ...
 [info] Loading global plugins from /home/mmurawski/.sbt/1.0/plugins
 [info] Loading settings for project dl4j-captcha-breaker-example-build from plugins.sbt ...
 [info] Loading project definition from dl4j-captcha-breaker-example/project
 [info] Loading settings for project dl4j-captcha-breaker-example from build.sbt ...
 [info] Set current project to dl4j-captcha-breaker-example (in build file:dl4j-captcha-breaker-example/)
+[info] Compiling 5 Scala sources to dl4j-captcha-breaker-example/target/scala-2.12/classes ...
+[info] [info] Cleaning datadir [dl4j-captcha-breaker-example/target/scala-2.12/scoverage-data]
+[info] [info] Beginning coverage instrumentation
+[info] [info] Instrumentation completed [224 statements]
+[info] [info] Wrote instrumentation file [dl4j-captcha-breaker-example/target/scala-2.12/scoverage-data/scoverage.coverage.xml]
+[info] [info] Will write measurement data to [dl4j-captcha-breaker-example/target/scala-2.12/scoverage-data]
+[info] Done compiling.
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by com.google.protobuf.UnsafeUtil (file:/home/mmurawski/.sbt/boot/scala-2.12.7/org.scala-sbt/sbt/1.2.8/protobuf-java-3.3.1.jar) to field java.nio.Buffer.address
+WARNING: Please consider reporting this to the maintainers of com.google.protobuf.UnsafeUtil
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
 [info] Packaging dl4j-captcha-breaker-example/target/scala-2.12/dl4j-captcha-breaker-example_2.12-1.0.jar ...
 [info] Done packaging.
-[info] Running com.datart.captcha_breaker.examples.dl4j.Main 
-12:53:23.772 [run-main-0] INFO org.datavec.image.recordreader.BaseImageRecordReader - ImageRecordReader: 27 label classes inferred using label generator ParentPathLabelGenerator
-12:53:23.833 [run-main-0] INFO org.datavec.image.recordreader.BaseImageRecordReader - ImageRecordReader: 27 label classes inferred using label generator ParentPathLabelGenerator
-12:53:23.850 [run-main-0] INFO org.nd4j.linalg.factory.Nd4jBackend - Loaded [CpuBackend] backend
-12:53:24.160 [run-main-0] INFO org.nd4j.nativeblas.NativeOpsHolder - Number of threads used for NativeOps: 6
-12:53:24.197 [run-main-0] INFO org.nd4j.nativeblas.Nd4jBlas - Number of threads used for BLAS: 6
-12:53:24.199 [run-main-0] INFO org.nd4j.linalg.api.ops.executioner.DefaultOpExecutioner - Backend used: [CPU]; OS: [Linux]
-12:53:24.199 [run-main-0] INFO org.nd4j.linalg.api.ops.executioner.DefaultOpExecutioner - Cores: [12]; Memory: [3.6GB];
-12:53:24.199 [run-main-0] INFO org.nd4j.linalg.api.ops.executioner.DefaultOpExecutioner - Blas vendor: [MKL]
-12:53:24.282 [run-main-0] INFO org.deeplearning4j.nn.multilayer.MultiLayerNetwork - Starting MultiLayerNetwork with WorkspaceModes set to [training: ENABLED; inference: ENABLED], cacheMode set to [NONE]
-12:53:24.332 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.trainer.ModelTrainerImpl - Starting learning model...
-12:53:24.375 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.trainer.ModelTrainerImpl - Epoch number: 0/200.
-12:53:24.528 [ADSI prefetch thread] DEBUG org.nd4j.linalg.memory.abstracts.Nd4jWorkspace - Steps: 5
-12:53:24.656 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 0 is 3.5399603843688965
-12:53:41.677 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 1000 is 2.9129018783569336
-12:53:59.065 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 2000 is 2.7215099334716797
-12:54:16.124 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 3000 is 2.565291404724121
-12:54:20.027 [run-main-0] DEBUG org.deeplearning4j.datasets.iterator.AsyncDataSetIterator - Manually destroying ADSI workspace
-12:54:20.027 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.trainer.ModelTrainerImpl - Epoch number: 1/200.
-12:54:20.028 [ADSI prefetch thread] DEBUG org.nd4j.linalg.memory.abstracts.Nd4jWorkspace - Steps: 5
-12:54:32.906 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 4000 is 2.297577142715454
-12:54:49.791 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 5000 is 2.299525022506714
-12:55:06.563 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 6000 is 2.366898536682129
-12:55:13.921 [run-main-0] DEBUG org.deeplearning4j.datasets.iterator.AsyncDataSetIterator - Manually destroying ADSI workspace
-12:55:13.921 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.trainer.ModelTrainerImpl - Epoch number: 2/200.
-12:55:13.921 [ADSI prefetch thread] DEBUG org.nd4j.linalg.memory.abstracts.Nd4jWorkspace - Steps: 5
+[info] Running com.datart.captcha_breaker.examples.dl4j.Main 400
+00:42:38.758 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.Main$ - Run arguments established: resources dir - ./src/main/resources, number of learning epochs: 400.
+00:44:58.428 [run-main-0] INFO org.datavec.image.recordreader.BaseImageRecordReader - ImageRecordReader: 27 label classes inferred using label generator ParentPathLabelGenerator
+00:44:58.432 [run-main-0] INFO org.datavec.image.recordreader.BaseImageRecordReader - ImageRecordReader: 27 label classes inferred using label generator ParentPathLabelGenerator
+00:44:58.457 [run-main-0] INFO org.nd4j.linalg.factory.Nd4jBackend - Loaded [CpuBackend] backend
+00:44:58.813 [run-main-0] INFO org.nd4j.nativeblas.NativeOpsHolder - Number of threads used for NativeOps: 6
+00:44:58.854 [run-main-0] INFO org.nd4j.nativeblas.Nd4jBlas - Number of threads used for BLAS: 6
+00:44:58.856 [run-main-0] INFO org.nd4j.linalg.api.ops.executioner.DefaultOpExecutioner - Backend used: [CPU]; OS: [Linux]
+00:44:58.856 [run-main-0] INFO org.nd4j.linalg.api.ops.executioner.DefaultOpExecutioner - Cores: [12]; Memory: [1.8GB];
+00:44:58.856 [run-main-0] INFO org.nd4j.linalg.api.ops.executioner.DefaultOpExecutioner - Blas vendor: [MKL]
+00:44:58.947 [run-main-0] INFO org.deeplearning4j.nn.multilayer.MultiLayerNetwork - Starting MultiLayerNetwork with WorkspaceModes set to [training: ENABLED; inference: ENABLED], cacheMode set to [NONE]
+00:44:59.004 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.trainer.ModelTrainerImpl - Starting learning model...
+00:44:59.009 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.trainer.ModelTrainerImpl - Epoch number: 0/400.
+00:44:59.163 [ADSI prefetch thread] DEBUG org.nd4j.linalg.memory.abstracts.Nd4jWorkspace - Steps: 5
+00:44:59.291 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 0 is 3.5982189178466797
+00:45:09.677 [run-main-0] DEBUG org.deeplearning4j.datasets.iterator.AsyncDataSetIterator - Manually destroying ADSI workspace
+00:45:09.678 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.trainer.ModelTrainerImpl - Epoch number: 1/400.
 [...]
-16:01:05.738 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.trainer.ModelTrainerImpl - Epoch number: 199/200.
-16:01:05.738 [ADSI prefetch thread] DEBUG org.nd4j.linalg.memory.abstracts.Nd4jWorkspace - Steps: 5
-16:01:26.581 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 643000 is 0.08678578585386276
-16:01:49.095 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 644000 is 0.08569760620594025
-16:02:12.899 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 645000 is 0.09236510097980499
-16:02:21.649 [run-main-0] DEBUG org.deeplearning4j.datasets.iterator.AsyncDataSetIterator - Manually destroying ADSI workspace
-16:02:21.649 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.trainer.ModelTrainerImpl - Learning model finished.
-16:02:28.453 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.Main$ - Trained model accuracy on testing set is: 0.950812884104084.
-16:02:38.338 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.Main$ - Trained model accuracy on testing set of captcha images (5 alphanums) is: 0.25985663082437277 (2610/10044 correctly predicted).
-[success] Total time: 11510 s, completed Apr 14, 2019, 4:02:39 PM
+01:22:55.103 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.trainer.ModelTrainerImpl - Epoch number: 399/400.
+01:22:55.104 [ADSI prefetch thread] DEBUG org.nd4j.linalg.memory.abstracts.Nd4jWorkspace - Steps: 5
+01:22:56.977 [run-main-0] INFO org.deeplearning4j.optimize.listeners.ScoreIterationListener - Score at iteration 129000 is 0.016332276165485382
+01:22:59.836 [run-main-0] DEBUG org.deeplearning4j.datasets.iterator.AsyncDataSetIterator - Manually destroying ADSI workspace
+01:22:59.836 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.trainer.ModelTrainerImpl - Learning model finished.
+01:23:00.467 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.Main$ - Trained model accuracy on testing set is: 0.9461873638344227.
+01:23:16.964 [run-main-0] INFO com.datart.captcha_breaker.examples.dl4j.Main$ - Trained model accuracy on testing set of captcha images (5 alphanums) is: 0.23 (230/1000 correctly predicted).
+[success] Total time: 2454 s, completed Apr 15, 2019, 1:23:17 AM
 ```
 
 #### Alternative arguments and input
 
-1. You can change how long model will be trained by providing custom positive integer indicating number of learning epochs. Default value is 200.
+1. You can change how long model will be trained by providing custom positive integer indicating number of learning epochs. Default value is 400.
 
 ```bash
 sbt "run epochs_number"
@@ -104,6 +105,6 @@ Unmatching parameters configuration are, as possible, converted and set with def
 This is not a production ready solution, only presentation of great tool solving captcha from real website. At least several things could be done to improve it:
 
 * full customization of learning process, number of classes, dimension of letters and length of captcha by a config file
-* preprocessing letters and captcha images - deleting noise, distortions and thresholding to only black and white colors
+* cleaning code out of warts
 
 Let it be your starting point if you find it helpful. :-)
